plugins {
    id 'java'
}

group 'DeliDish-opdracht2'
version '1.0'

sourceCompatibility = 17
targetCompatibility = 17


def cucumberVersion = "7.5.0"
def jUnitVersion = "5.9.1"

repositories {
    mavenCentral()
}

dependencies {
    testImplementation "io.cucumber:cucumber-java:${cucumberVersion}"
    testImplementation "io.cucumber:cucumber-junit:${cucumberVersion}"

    testImplementation "org.junit.jupiter:junit-jupiter-api:${jUnitVersion}"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${jUnitVersion}"
    testRuntimeOnly "org.junit.vintage:junit-vintage-engine:${jUnitVersion}"
    implementation "io.cucumber:cucumber-junit:${cucumberVersion}"
}